--- a/package.json
+++ b/package.json
@@ -13,22 +13,26 @@
   },
   "dependencies": {
     "@heyputer/puter.js": "^2.2.10",
-    "@octokit/auth-oauth-device": "^8.0.3",
-    "@octokit/rest": "^22.0.1",
+    "@octokit/auth-oauth-device": "^7.1.3",
+    "@octokit/rest": "^21.1.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.34.3",
-    "lucide-react": "^0.575.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-router-dom": "^7.13.0",
-    "tailwind-merge": "^3.5.0"
+    "framer-motion": "^12.4.7",
+    "lucide-react": "^0.475.0",
+    "lzma": "^2.3.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.2.0",
+    "sql.js": "^1.12.0",
+    "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@tailwindcss/vite": "^4.2.0",
+    "@types/lzma": "^2.3.0",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "@types/sql.js": "^1.4.9",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.24",
     "eslint": "^9.39.1",
